syntax = "proto3";

option java_package = "com.sample.fitfinder.proto";
option java_multiple_files = true;

message GoogleToken {
    string tokenId = 1;
    int64 expiredDateTime = 2;
}